--- a/src/_assets/css/app.scss
+++ b/src/_assets/css/app.scss
@@ -1,11 +1,1 @@
-@import "foundation";
-
-body {
-  font-family: sans-serif;
-}
-.header, .footer {
-  background-color: #eeeeee;
-  p {
-    font-weight: 100;
-  }
-}
+@import "bootstrap";
