--- a/src/_layouts/default.slim
+++ b/src/_layouts/default.slim
@@ -11,16 +11,21 @@ html
     | {% endcss_asset_tag %}
 
   body
-    .header
+    .wrapper
+      .header
+        nav.navbar.navbar-default role="navigation"
+          .container-fluid
+            .navbar-header
+              button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.navbar-brand href="#" {{ site.name }}
+
       .row
-        .large-12.columns.text-center
-          h1.title
-            a href="/"
-              | {{ site.name }}
-          a.button.small href="/" Home
-    .row
-      .large-12.columns
-      | {{ content }}
+        .large-12.columns
+        | {{ content }}
     .footer
       .row
         .large-12.columns.text-center
