--- a/src/_layouts/default.slim
+++ b/src/_layouts/default.slim
@@ -9,25 +9,40 @@ html
     | {% css_asset_tag global %}
       - /_assets/css/app.scss
     | {% endcss_asset_tag %}
+    | {% javascript_asset_tag global %}
+      - /_assets/js/home.js
+    | {% endjavascript_asset_tag %}
 
-  body
-    .wrapper
-      .header
-        nav.navbar.navbar-default role="navigation"
-          .container-fluid
-            .navbar-header
-              button.navbar-toggle.collapsed type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-              a.navbar-brand href="#" {{ site.name }}
+  body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"
+    nav.navbar.navbar-custom.navbar-fixed-top role="navigation"
+      .container
+        .navbar-header
+          button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-main-collapse"
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand href="#page-top" {{ site.name }}
 
-      .row
-        .large-12.columns
-        | {{ content }}
-    .footer
-      .row
-        .large-12.columns.text-center
-          .contact
-            p Mike Nguyen
+        .collapse.navbar-collapse.navbar-right.navbar-main.collapse
+          ul.nav.navbar-nav
+            / Hidden li included to remove active class from about link when scrolled up past about section
+            li.hidden
+              a href="#page-top"
+            li
+              a.page-scroll href="#about" About
+            li
+              a.page-scroll href="#download" Download
+            li
+              a.page-scroll href="#contact" Contact
+
+    / Intro cover page
+    header.intro
+      .intro-body
+        .container
+          row
+            .col-md-8.col-md-offset-2
+              h1.brand-heading BITS
+              p.intro-text Boston IT Services
+              a.btn.btn-circle.page-scroll href="#about"
+                i.fa.fa-angle-double-down.animated
