--- a/src/_layouts/default.slim
+++ b/src/_layouts/default.slim
@@ -22,7 +22,8 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#page-top" {{ site.name }}
+          a.navbar-brand href="#page-top"
+            img src="../img/bits_logo_sm.png"
 
         .collapse.navbar-collapse.navbar-right.navbar-main.collapse
           ul.nav.navbar-nav
