--- a/src/_layouts/default.slim
+++ b/src/_layouts/default.slim
@@ -6,6 +6,9 @@ html
     title
       | {{ page.title }}
     meta name="viewport" content="width=device-width"
+
+    / Font Awesome CDN
+    link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
     | {% css_asset_tag global %}
       - /_assets/css/app.scss
     | {% endcss_asset_tag %}
