Re-add part of head partial

--- a/src/_includes/head.slim
+++ b/src/_includes/head.slim
@@ -7,9 +7,9 @@ head
 
   / Font Awesome CDN
   link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
-  | {% css_asset_tag global %}
-    - /_assets/css/app.scss
-  | {% endcss_asset_tag %}
-  | {% javascript_asset_tag global %}
-    - /_assets/js/home.js
-  | {% endjavascript_asset_tag %}
+  / | {% css_asset_tag global %}
+  /   - /_assets/css/app.scss
+  / | {% endcss_asset_tag %}
+  / | {% javascript_asset_tag global %}
+  /   - /_assets/js/home.js
+  / | {% endjavascript_asset_tag %}
