--- a/src/_layouts/default.slim
+++ b/src/_layouts/default.slim
@@ -1,21 +1,21 @@
 doctype html
 html
-  / | {% slim head.slim %}
-  head
-    meta charset="utf-8"
-    meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
-    title
-      | {{ page.title }}
-    meta name="viewport" content="width=device-width"
+  | {% slim head.slim %}
+  / head
+  /   meta charset="utf-8"
+  /   meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
+  /   title
+  /     | {{ page.title }}
+  /   meta name="viewport" content="width=device-width"
 
-    / Font Awesome CDN
-    link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
-    | {% css_asset_tag global %}
-      - /_assets/css/app.scss
-    | {% endcss_asset_tag %}
-    | {% javascript_asset_tag global %}
-      - /_assets/js/home.js
-    | {% endjavascript_asset_tag %}
+  /   / Font Awesome CDN
+  /   link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
+  /   | {% css_asset_tag global %}
+  /     - /_assets/css/app.scss
+  /   | {% endcss_asset_tag %}
+  /   | {% javascript_asset_tag global %}
+  /     - /_assets/js/home.js
+  /   | {% endjavascript_asset_tag %}
 
   body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"
     | {% slim navbar.slim %}
