--- a/src/_includes/navbar.slim
+++ b/src/_includes/navbar.slim
@@ -2,20 +2,17 @@ nav.navbar.navbar-custom.navbar-fixed-top role="navigation"
   .container
     .navbar-header
       button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-main-collapse"
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+        i.fa.fa-bars
       a.navbar-brand href="#page-top"
         img src="../img/bits_logo_sm.png"
 
-    .collapse.navbar-collapse.navbar-right.navbar-main.collapse
+    .collapse.navbar-collapse.navbar-right.navbar-main-collapse
       ul.nav.navbar-nav
         / Hidden li included to remove active class from about link when scrolled up past about section
         li.hidden
           a href="#page-top"
         li
-          a.page-scroll href="#" About
+          a.page-scroll href="#about" About
         li
           a.page-scroll href="#" Our Work
         li
