Fix navbar styling

--- a/src/_layouts/home.slim
+++ b/src/_layouts/home.slim
@@ -8,6 +8,8 @@ html
     - /_assets/css/app.scss
   | {% endcss_asset_tag %}
   | {% javascript_asset_tag global %}
+    - /_assets/js/jquery-2.1.3.min.js
+    - /_assets/js/jquery.easing.1.3.js
     - /_assets/js/home.js
   | {% endjavascript_asset_tag %}
 
