--- a/src/_assets/css/base.scss
+++ b/src/_assets/css/base.scss
@@ -6,6 +6,7 @@ $color-pot: #9792A7;
 $color-blue: #395781;
 
 // Variations
+$color-light-skin: lighten($color-skin, 15%);
 $color-dark-pot: darken($color-pot, 20%);
 $color-dark-persim: darken($color-persim, 20%);
 $color-dark-roon: darken($color-roon, 20%);
@@ -66,66 +67,4 @@ a {
 
 .light {
   font-weight: 400;
-}
-
-.navbar-custom {
-  margin-bottom: 0;
-  border-bottom: 1px solid rgba(255,255,255,.3);
-  text-transform: uppercase;
-  font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color: #000;
-  a {
-    color: $color-blue;
-  }
-  .nav {
-    li a {
-      -webkit-transition: background .3s ease-in-out;
-      -moz-transition: background .3s ease-in-out;
-      transition: background .3s ease-in-out;
-      &:hover,
-      &:focus,
-      &:active {
-        outline: 0;
-        background-color: rgba(255,255,255,.3);
-      }
-    }
-  }
-  .navbar-brand {
-    font-weight: 700;
-    padding: 0 15px;
-    &:focus {
-      outline: 0;
-    }
-  }
-  .navbar-toggle {
-    padding: 4px 6px;
-    font-size: 16px;
-    color: $color-blue;
-    &:focus,
-    &:active {
-      outline: 0;
-    }
-  }
-
-}
-
-@media(min-width:767px) {
-  .navbar {
-    padding: 20px 0;
-    border-bottom: 0;
-    letter-spacing: 1px;
-    background: 0 0;
-    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    transition: background .5s ease-in-out,padding .5s ease-in-out;
-  }
-
-  .top-nav-collapse {
-    padding: 0;
-    background-color: #000;
-  }
-
-  .navbar-custom.top-nav-collapse {
-    border-bottom: 1px solid rgba(255,255,255,.3);
-  }
 }
